Alignment fix for the initiatives page

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -539,3 +539,8 @@ td:not(:last-child), th:not(:last-child) {
         color : white ;
     }
 }
+
+
+#initiatives + p {
+    text-align : center ;
+}
